src/main/java/org/easysoc/plugins/diagrammer/parser/ElktLanguageParser.java
// Generated from /media/itviewer/linux/easysoc/easysoc-diagrammer/src/main/antlr/ElktLanguage.g4 by ANTLR 4.9.2
package org.easysoc.plugins.diagrammer.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ElktLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		Key_node=10, Key_label=11, Key_port=12, Key_edge=13, Key_layout=14, Key_size=15, 
		Key_section=16, Key_incoming=17, Key_outgoing=18, Key_start=19, Key_end=20, 
		Key_bends=21, BooleanValue=22, QualifiedId=23, StringLit=24, Number=25, 
		DoubleLit=26, UnsignedInt=27, SignedInt=28, COMMENT=29, WHITESPACE=30, 
		NEWLINE=31, ERRCHAR=32;
	public static final int
		RULE_graph = 0, RULE_layout = 1, RULE_property = 2, RULE_propertyKey = 3, 
		RULE_propertyValue = 4, RULE_node = 5, RULE_port = 6, RULE_label = 7, 
		RULE_edge = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"graph", "layout", "property", "propertyKey", "propertyValue", "node", 
			"port", "label", "edge"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "'position'", "':'", "','", "']'", "'null'", "'{'", "'}'", 
			"'->'", "'node'", "'label'", "'port'", "'edge'", "'layout'", "'size'", 
			"'section'", "'incoming'", "'outgoing'", "'start'", "'end'", "'bends'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "Key_node", 
			"Key_label", "Key_port", "Key_edge", "Key_layout", "Key_size", "Key_section", 
			"Key_incoming", "Key_outgoing", "Key_start", "Key_end", "Key_bends", 
			"BooleanValue", "QualifiedId", "StringLit", "Number", "DoubleLit", "UnsignedInt", 
			"SignedInt", "COMMENT", "WHITESPACE", "NEWLINE", "ERRCHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ElktLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ElktLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GraphContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ElktLanguageParser.EOF, 0); }
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_graph);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Key_layout) {
				{
				setState(18);
				layout();
				}
			}

			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QualifiedId) {
				{
				{
				setState(21);
				property();
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Key_node || _la==Key_edge) {
				{
				setState(29);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Key_node:
					{
					setState(27);
					node();
					}
					break;
				case Key_edge:
					{
					setState(28);
					edge();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayoutContext extends ParserRuleContext {
		public Token x;
		public Token y;
		public Token width;
		public Token height;
		public TerminalNode Key_layout() { return getToken(ElktLanguageParser.Key_layout, 0); }
		public TerminalNode Key_size() { return getToken(ElktLanguageParser.Key_size, 0); }
		public List<TerminalNode> Number() { return getTokens(ElktLanguageParser.Number); }
		public TerminalNode Number(int i) {
			return getToken(ElktLanguageParser.Number, i);
		}
		public LayoutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layout; }
	}

	public final LayoutContext layout() throws RecognitionException {
		LayoutContext _localctx = new LayoutContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_layout);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(Key_layout);
			setState(37);
			match(T__0);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(38);
				match(T__1);
				setState(39);
				match(T__2);
				setState(40);
				((LayoutContext)_localctx).x = match(Number);
				setState(41);
				match(T__3);
				setState(42);
				((LayoutContext)_localctx).y = match(Number);
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Key_size) {
				{
				setState(45);
				match(Key_size);
				setState(46);
				match(T__2);
				setState(47);
				((LayoutContext)_localctx).width = match(Number);
				setState(48);
				match(T__3);
				setState(49);
				((LayoutContext)_localctx).height = match(Number);
				}
			}

			}
			setState(52);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public PropertyKeyContext propertyKey() {
			return getRuleContext(PropertyKeyContext.class,0);
		}
		public PropertyValueContext propertyValue() {
			return getRuleContext(PropertyValueContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			propertyKey();
			setState(55);
			match(T__2);
			setState(56);
			propertyValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyKeyContext extends ParserRuleContext {
		public TerminalNode QualifiedId() { return getToken(ElktLanguageParser.QualifiedId, 0); }
		public PropertyKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyKey; }
	}

	public final PropertyKeyContext propertyKey() throws RecognitionException {
		PropertyKeyContext _localctx = new PropertyKeyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_propertyKey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(QualifiedId);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyValueContext extends ParserRuleContext {
		public TerminalNode StringLit() { return getToken(ElktLanguageParser.StringLit, 0); }
		public TerminalNode QualifiedId() { return getToken(ElktLanguageParser.QualifiedId, 0); }
		public TerminalNode Number() { return getToken(ElktLanguageParser.Number, 0); }
		public TerminalNode BooleanValue() { return getToken(ElktLanguageParser.BooleanValue, 0); }
		public PropertyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyValue; }
	}

	public final PropertyValueContext propertyValue() throws RecognitionException {
		PropertyValueContext _localctx = new PropertyValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_propertyValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << BooleanValue) | (1L << QualifiedId) | (1L << StringLit) | (1L << Number))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public TerminalNode Key_node() { return getToken(ElktLanguageParser.Key_node, 0); }
		public TerminalNode QualifiedId() { return getToken(ElktLanguageParser.QualifiedId, 0); }
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<PortContext> port() {
			return getRuleContexts(PortContext.class);
		}
		public PortContext port(int i) {
			return getRuleContext(PortContext.class,i);
		}
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(Key_node);
			setState(63);
			match(QualifiedId);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(64);
				match(T__6);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Key_layout) {
					{
					setState(65);
					layout();
					}
				}

				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QualifiedId) {
					{
					{
					setState(68);
					property();
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Key_node) | (1L << Key_label) | (1L << Key_port) | (1L << Key_edge))) != 0)) {
					{
					setState(78);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case Key_label:
						{
						setState(74);
						label();
						}
						break;
					case Key_port:
						{
						setState(75);
						port();
						}
						break;
					case Key_edge:
						{
						setState(76);
						edge();
						}
						break;
					case Key_node:
						{
						setState(77);
						node();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public TerminalNode Key_port() { return getToken(ElktLanguageParser.Key_port, 0); }
		public TerminalNode QualifiedId() { return getToken(ElktLanguageParser.QualifiedId, 0); }
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_port);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(Key_port);
			setState(87);
			match(QualifiedId);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(88);
				match(T__6);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Key_layout) {
					{
					setState(89);
					layout();
					}
				}

				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QualifiedId) {
					{
					{
					setState(92);
					property();
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Key_label) {
					{
					{
					setState(98);
					label();
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(104);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode Key_label() { return getToken(ElktLanguageParser.Key_label, 0); }
		public TerminalNode StringLit() { return getToken(ElktLanguageParser.StringLit, 0); }
		public TerminalNode QualifiedId() { return getToken(ElktLanguageParser.QualifiedId, 0); }
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Key_label);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QualifiedId) {
				{
				setState(108);
				match(QualifiedId);
				setState(109);
				match(T__2);
				}
			}

			setState(112);
			match(StringLit);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(113);
				match(T__6);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Key_layout) {
					{
					setState(114);
					layout();
					}
				}

				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QualifiedId) {
					{
					{
					setState(117);
					property();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Key_label) {
					{
					{
					setState(123);
					label();
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public TerminalNode Key_edge() { return getToken(ElktLanguageParser.Key_edge, 0); }
		public List<TerminalNode> QualifiedId() { return getTokens(ElktLanguageParser.QualifiedId); }
		public TerminalNode QualifiedId(int i) {
			return getToken(ElktLanguageParser.QualifiedId, i);
		}
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_edge);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(Key_edge);
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(133);
				match(QualifiedId);
				setState(134);
				match(T__2);
				}
				break;
			}
			setState(137);
			match(QualifiedId);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(138);
				match(T__3);
				setState(139);
				match(QualifiedId);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(T__8);
			setState(146);
			match(QualifiedId);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(147);
				match(T__3);
				setState(148);
				match(QualifiedId);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(154);
				match(T__6);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Key_layout) {
					{
					setState(155);
					layout();
					}
				}

				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QualifiedId) {
					{
					{
					setState(158);
					property();
					}
					}
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Key_label) {
					{
					{
					setState(164);
					label();
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(170);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}
